[package]
name = "mic-mute"
description = "System-wide mic mute for macOS"
version = "0.1.0"
edition = "2021"
authors = ["Brett Gardiner"]
license = "MIT"

default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "post-build"
test = false
bench = false

[dependencies]
log = "0.4"
env_logger = "0.10"
anyhow = "1.0.69"
tao = "0.18"
tray-icon = "0.4"
image = "0.24"
global-hotkey = "0.1"
async-std = "1.12"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"
dark-light = "1.0"
coreaudio-rs = "0.11"
core-foundation-sys = "0.8"

[package.metadata.bundle]
name = "Mic Mute"
identifier = "com.brettinternet.mic-mute"
icon = ["assets/32x32.png", "assets/128x128.png"]
copyright = "Copyright (c) Brett Gardiner 2023. All rights reserved."
category = "Utility"
short_description = "System-wide mic mute for macOS"
long_description = """
A system-wide mute for macOS microphones with a global shortcut and visual confirmation of mute status. Inspired by VCM for Windows.
"""
osx_frameworks = ["Cocoa", "CoreAudio", "AppKit", "Foundation"]
osx_url_schemes = ["com.brettinternet.mic-mute"]
