[package]
name = "mic-mute"
description = "System-wide mic mute for macOS"
version = "0.3.0"
edition = "2021"
authors = ["Brett Gardiner"]
license = "MIT"

default-run = "mic-mute"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1"
tao = "0.35"
tray-icon = "0.21"
muda = "0.17"
image = "0.25"
global-hotkey = "0.7"
async-std = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"
coreaudio-rs = "0.14"
core-foundation-sys = "0.8"
objc2-core-audio = { version = "0.3", features = ["AudioHardware", "AudioHardwareDeprecated"] }
objc2-core-audio-types = { version = "0.3", features = ["CoreAudioBaseTypes"] }

[lints.rust]
# objc 0.2.x macros use the old cfg(cargo-clippy) pattern which triggers this lint
unexpected_cfgs = "allow"

[package.metadata.bundle]
name = "Mic Mute"
identifier = "com.brettinternet.mic-mute"
icon = [
  "assets/icons/16x16.png",
  "assets/icons/16x16@2x.png",
  "assets/icons/32x32.png",
  "assets/icons/32x32@2x.png",
  "assets/icons/128x128.png",
  "assets/icons/128x128@2x.png",
  "assets/icons/256x256.png",
  "assets/icons/256x256@2x.png",
  "assets/icons/512x512.png",
  "assets/icons/512x512@2x.png"
]
copyright = "Copyright (c) Brett Gardiner 2023. All rights reserved."
category = "public.app-category.utilities"
short_description = "System-wide mic mute for macOS"
long_description = """
A system-wide mute for macOS microphones with a global shortcut and visual confirmation of mute status. Inspired by VCM for Windows.
"""
# osx_frameworks = ["Cocoa", "CoreAudio", "AppKit", "Foundation"]
osx_url_schemes = ["com.brettinternet.mic-mute"]
osx_minimum_system_version = "10"
